# whycant

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  build.rs  justfile
.github/workflows/: ci.yml
src/: access_check.rs  cli.rs  config.rs  engine.rs  fix.rs  identity.rs  lib.rs  main.rs  op.rs  report.rs  term.rs
src/layers/: acl.rs  attrs.rs  caps.rs  container.rs  dac.rs  existence.rs  mac.rs  macos.rs  mod.rs  mount.rs  netfs.rs  traverse.rs
src/render/: human.rs  machine.rs  mod.rs
src/render/snapshots/: whycant__render__machine__tests__plain_snapshot.snap
tests/: create_semantics.rs  render_snapshots.rs  root_integration.rs
tests/snapshots/: render_snapshots__acl_denied__human__color.snap  render_snapshots__acl_denied__human__dumb.snap  render_snapshots__acl_denied__human__hyperlink.snap  render_snapshots__acl_denied__human__nocolor.snap  render_snapshots__acl_denied__json.snap  render_snapshots__acl_denied__plain.snap  render_snapshots__acl_denied__toml.snap  render_snapshots__allowed_concur__human__color.snap  render_snapshots__allowed_concur__human__dumb.snap  render_snapshots__allowed_concur__human__hyperlink.snap  render_snapshots__allowed_concur__human__piped.snap  render_snapshots__allowed_concur__json.snap  render_snapshots__allowed_concur__plain.snap  render_snapshots__allowed_concur__toml.snap  render_snapshots__blocked_traverse__human__color.snap  render_snapshots__blocked_traverse__human__dumb.snap  render_snapshots__blocked_traverse__human__hyperlink.snap  render_snapshots__blocked_traverse__human__piped.snap  render_snapshots__blocked_traverse__json.snap  render_snapshots__blocked_traverse__plain.snap  render_snapshots__blocked_traverse__toml.snap  render_snapshots__target_error__human__color.snap  render_snapshots__target_error__human__dumb.snap  render_snapshots__target_error__human__hyperlink.snap  render_snapshots__target_error__human__nocolor.snap  render_snapshots__target_error__json.snap  render_snapshots__target_error__plain.snap  render_snapshots__target_error__toml.snap
